summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value estDevantBiscuit
  while (!estDevantBiscuit || !estFaceMur) {
          ^