summative.moria.Moria.scala.code
def run () {
  var compt: Int = 0
  while (!estDevantBiscuit || !estFaceMur) {
    forward()
    
  }
}